09. semester/MlaskalCompiler/public-rw/SWI098/du5/du5g.output
Grammar

    0 $accept: mlaskal $end

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT

    2 program_block: block_label block_const block_type block_var block_proc_func block_begin_end

    3 block_proc_func: /* empty */
    4                | proc_func_defs DUTOK_SEMICOLON

    5 proc_func_def: proc DUTOK_SEMICOLON block
    6              | func DUTOK_SEMICOLON block

    7 proc_func_defs: proc_func_def
    8               | proc_func_defs DUTOK_SEMICOLON proc_func_def

    9 block: block_label block_const block_type block_var block_begin_end

   10 block_label: /* empty */
   11            | DUTOK_LABEL uints DUTOK_SEMICOLON

   12 block_const: /* empty */
   13            | DUTOK_CONST id_assigns DUTOK_SEMICOLON

   14 id_assign: DUTOK_IDENTIFIER DUTOK_EQ const

   15 id_assigns: id_assign
   16           | id_assigns DUTOK_SEMICOLON id_assign

   17 block_type: /* empty */
   18           | DUTOK_TYPE type_assigns DUTOK_SEMICOLON

   19 type_assign: DUTOK_IDENTIFIER DUTOK_EQ type

   20 type_assigns: type_assign
   21             | type_assigns DUTOK_SEMICOLON type_assign

   22 block_var: /* empty */
   23          | DUTOK_VAR var_defs DUTOK_SEMICOLON

   24 var_def: identifiers DUTOK_COLON type

   25 var_defs: var_def
   26         | var_defs DUTOK_SEMICOLON var_def

   27 block_begin_end: DUTOK_BEGIN stmts DUTOK_END

   28 stmt: m_stmt
   29     | u_stmt

   30 m_stmt: DUTOK_IF expr DUTOK_THEN m_stmt DUTOK_ELSE m_stmt
   31       | DUTOK_WHILE expr DUTOK_DO m_stmt
   32       | DUTOK_UINT DUTOK_COLON stmt_rest
   33       | stmt_rest

   34 u_stmt: DUTOK_IF expr DUTOK_THEN stmt
   35       | DUTOK_IF expr DUTOK_THEN m_stmt DUTOK_ELSE u_stmt
   36       | DUTOK_WHILE expr DUTOK_DO u_stmt
   37       | DUTOK_FOR DUTOK_IDENTIFIER DUTOK_ASSIGN expr DUTOK_FOR_DIRECTION expr DUTOK_DO u_stmt

   38 stmt_rest: /* empty */
   39          | DUTOK_IDENTIFIER DUTOK_ASSIGN expr
   40          | array_var DUTOK_ASSIGN expr
   41          | DUTOK_IDENTIFIER
   42          | DUTOK_IDENTIFIER DUTOK_LPAR real_params DUTOK_RPAR
   43          | DUTOK_GOTO DUTOK_UINT
   44          | DUTOK_BEGIN stmts DUTOK_END
   45          | DUTOK_REPEAT stmts DUTOK_UNTIL expr
   46          | DUTOK_FOR DUTOK_IDENTIFIER DUTOK_ASSIGN expr DUTOK_FOR_DIRECTION expr DUTOK_DO m_stmt

   47 stmts: stmt
   48      | stmts DUTOK_SEMICOLON stmt

   49 real_params: expr
   50            | real_params DUTOK_COMMA expr

   51 expr: simple_expr
   52     | simple_expr DUTOK_OPER_REL simple_expr
   53     | simple_expr DUTOK_EQ simple_expr

   54 simple_expr: terms
   55            | DUTOK_OPER_SIGNADD terms

   56 terms: term
   57      | terms DUTOK_OPER_SIGNADD term
   58      | terms DUTOK_OR term

   59 term: factors

   60 factors: factor
   61        | factors DUTOK_OPER_MUL factor

   62 factor: DUTOK_IDENTIFIER
   63       | DUTOK_UINT
   64       | DUTOK_REAL
   65       | DUTOK_STRING
   66       | array_var
   67       | DUTOK_IDENTIFIER DUTOK_LPAR real_params DUTOK_RPAR
   68       | DUTOK_LPAR expr DUTOK_RPAR
   69       | DUTOK_NOT factor

   70 array_var: DUTOK_IDENTIFIER idxs

   71 idxs: idx
   72     | idxs idx

   73 idx: DUTOK_LSBRA exprs DUTOK_RSBRA

   74 exprs: expr
   75      | exprs DUTOK_COMMA expr

   76 type: DUTOK_IDENTIFIER
   77     | range
   78     | DUTOK_ARRAY DUTOK_LSBRA ord_types DUTOK_RSBRA DUTOK_OF type

   79 ord_types: ord_type
   80          | ord_types DUTOK_COMMA ord_type

   81 ord_type: DUTOK_IDENTIFIER
   82         | range

   83 range: ord_const DUTOK_DOTDOT ord_const

   84 proc: DUTOK_PROCEDURE DUTOK_IDENTIFIER params

   85 func: DUTOK_FUNCTION DUTOK_IDENTIFIER params DUTOK_COLON DUTOK_IDENTIFIER

   86 params: /* empty */
   87       | DUTOK_LPAR DUTOK_RPAR
   88       | DUTOK_LPAR formal_params DUTOK_RPAR

   89 formal_params: params_section
   90              | formal_params DUTOK_SEMICOLON params_section

   91 params_section: identifiers DUTOK_COLON DUTOK_IDENTIFIER
   92               | DUTOK_VAR identifiers DUTOK_COLON DUTOK_IDENTIFIER

   93 const: DUTOK_IDENTIFIER
   94      | DUTOK_OPER_SIGNADD DUTOK_IDENTIFIER
   95      | DUTOK_UINT
   96      | DUTOK_OPER_SIGNADD DUTOK_UINT
   97      | DUTOK_REAL
   98      | DUTOK_OPER_SIGNADD DUTOK_REAL
   99      | DUTOK_STRING

  100 ord_const: /* empty */
  101          | DUTOK_IDENTIFIER
  102          | DUTOK_OPER_SIGNADD DUTOK_IDENTIFIER
  103          | DUTOK_UINT
  104          | DUTOK_OPER_SIGNADD DUTOK_UINT

  105 identifiers: DUTOK_IDENTIFIER
  106            | identifiers DUTOK_COMMA DUTOK_IDENTIFIER

  107 uints: DUTOK_UINT
  108      | uints DUTOK_COMMA DUTOK_UINT


Terminals, with rules where they appear

$end (0) 0
error (256)
DUTOK_PROGRAM (258) 1
DUTOK_LABEL (259) 11
DUTOK_CONST (260) 13
DUTOK_TYPE (261) 18
DUTOK_VAR (262) 23 92
DUTOK_BEGIN (263) 27 44
DUTOK_END (264) 27 44
DUTOK_PROCEDURE (265) 84
DUTOK_FUNCTION (266) 85
DUTOK_ARRAY (267) 78
DUTOK_OF (268) 78
DUTOK_GOTO (269) 43
DUTOK_IF (270) 30 34 35
DUTOK_THEN (271) 30 34 35
DUTOK_ELSE (272) 30 35
DUTOK_WHILE (273) 31 36
DUTOK_DO (274) 31 36 37 46
DUTOK_REPEAT (275) 45
DUTOK_UNTIL (276) 45
DUTOK_FOR (277) 37 46
DUTOK_OR (278) 58
DUTOK_NOT (279) 69
DUTOK_IDENTIFIER (280) 1 14 19 37 39 41 42 46 62 67 70 76 81 84 85
    91 92 93 94 101 102 105 106
DUTOK_UINT (281) 32 43 63 95 96 103 104 107 108
DUTOK_REAL (282) 64 97 98
DUTOK_STRING (283) 65 99
DUTOK_SEMICOLON (284) 1 4 5 6 8 11 13 16 18 21 23 26 48 90
DUTOK_DOT (285) 1
DUTOK_COMMA (286) 50 75 80 106 108
DUTOK_EQ (287) 14 19 53
DUTOK_COLON (288) 24 32 85 91 92
DUTOK_LPAR (289) 42 67 68 87 88
DUTOK_RPAR (290) 42 67 68 87 88
DUTOK_DOTDOT (291) 83
DUTOK_LSBRA (292) 73 78
DUTOK_RSBRA (293) 73 78
DUTOK_ASSIGN (294) 37 39 40 46
DUTOK_OPER_REL (295) 52
DUTOK_OPER_SIGNADD (296) 55 57 94 96 98 102 104
DUTOK_OPER_MUL (297) 61
DUTOK_FOR_DIRECTION (298) 37 46


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
mlaskal (45)
    on left: 1, on right: 0
program_block (46)
    on left: 2, on right: 1
block_proc_func (47)
    on left: 3 4, on right: 2
proc_func_def (48)
    on left: 5 6, on right: 7 8
proc_func_defs (49)
    on left: 7 8, on right: 4 8
block (50)
    on left: 9, on right: 5 6
block_label (51)
    on left: 10 11, on right: 2 9
block_const (52)
    on left: 12 13, on right: 2 9
id_assign (53)
    on left: 14, on right: 15 16
id_assigns (54)
    on left: 15 16, on right: 13 16
block_type (55)
    on left: 17 18, on right: 2 9
type_assign (56)
    on left: 19, on right: 20 21
type_assigns (57)
    on left: 20 21, on right: 18 21
block_var (58)
    on left: 22 23, on right: 2 9
var_def (59)
    on left: 24, on right: 25 26
var_defs (60)
    on left: 25 26, on right: 23 26
block_begin_end (61)
    on left: 27, on right: 2 9
stmt (62)
    on left: 28 29, on right: 34 47 48
m_stmt (63)
    on left: 30 31 32 33, on right: 28 30 31 35 46
u_stmt (64)
    on left: 34 35 36 37, on right: 29 35 36 37
stmt_rest (65)
    on left: 38 39 40 41 42 43 44 45 46, on right: 32 33
stmts (66)
    on left: 47 48, on right: 27 44 45 48
real_params (67)
    on left: 49 50, on right: 42 50 67
expr (68)
    on left: 51 52 53, on right: 30 31 34 35 36 37 39 40 45 46 49 50
    68 74 75
simple_expr (69)
    on left: 54 55, on right: 51 52 53
terms (70)
    on left: 56 57 58, on right: 54 55 57 58
term (71)
    on left: 59, on right: 56 57 58
factors (72)
    on left: 60 61, on right: 59 61
factor (73)
    on left: 62 63 64 65 66 67 68 69, on right: 60 61 69
array_var (74)
    on left: 70, on right: 40 66
idxs (75)
    on left: 71 72, on right: 70 72
idx (76)
    on left: 73, on right: 71 72
exprs (77)
    on left: 74 75, on right: 73 75
type (78)
    on left: 76 77 78, on right: 19 24 78
ord_types (79)
    on left: 79 80, on right: 78 80
ord_type (80)
    on left: 81 82, on right: 79 80
range (81)
    on left: 83, on right: 77 82
proc (82)
    on left: 84, on right: 5
func (83)
    on left: 85, on right: 6
params (84)
    on left: 86 87 88, on right: 84 85
formal_params (85)
    on left: 89 90, on right: 88 90
params_section (86)
    on left: 91 92, on right: 89 90
const (87)
    on left: 93 94 95 96 97 98 99, on right: 14
ord_const (88)
    on left: 100 101 102 103 104, on right: 83
identifiers (89)
    on left: 105 106, on right: 24 91 92 106
uints (90)
    on left: 107 108, on right: 11 108


state 0

    0 $accept: . mlaskal $end
    1 mlaskal: . DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT

    DUTOK_PROGRAM  shift, and go to state 1

    mlaskal  go to state 2


state 1

    1 mlaskal: DUTOK_PROGRAM . DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT

    DUTOK_IDENTIFIER  shift, and go to state 3


state 2

    0 $accept: mlaskal . $end

    $end  shift, and go to state 4


state 3

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER . DUTOK_SEMICOLON program_block DUTOK_DOT

    DUTOK_SEMICOLON  shift, and go to state 5


state 4

    0 $accept: mlaskal $end .

    $default  accept


state 5

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON . program_block DUTOK_DOT
    2 program_block: . block_label block_const block_type block_var block_proc_func block_begin_end
   10 block_label: .  [DUTOK_CONST, DUTOK_TYPE, DUTOK_VAR, DUTOK_BEGIN, DUTOK_PROCEDURE, DUTOK_FUNCTION]
   11            | . DUTOK_LABEL uints DUTOK_SEMICOLON

    DUTOK_LABEL  shift, and go to state 6

    $default  reduce using rule 10 (block_label)

    program_block  go to state 7
    block_label    go to state 8


state 6

   11 block_label: DUTOK_LABEL . uints DUTOK_SEMICOLON
  107 uints: . DUTOK_UINT
  108      | . uints DUTOK_COMMA DUTOK_UINT

    DUTOK_UINT  shift, and go to state 9

    uints  go to state 10


state 7

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block . DUTOK_DOT

    DUTOK_DOT  shift, and go to state 11


state 8

    2 program_block: block_label . block_const block_type block_var block_proc_func block_begin_end
   12 block_const: .  [DUTOK_TYPE, DUTOK_VAR, DUTOK_BEGIN, DUTOK_PROCEDURE, DUTOK_FUNCTION]
   13            | . DUTOK_CONST id_assigns DUTOK_SEMICOLON

    DUTOK_CONST  shift, and go to state 12

    $default  reduce using rule 12 (block_const)

    block_const  go to state 13


state 9

  107 uints: DUTOK_UINT .

    $default  reduce using rule 107 (uints)


state 10

   11 block_label: DUTOK_LABEL uints . DUTOK_SEMICOLON
  108 uints: uints . DUTOK_COMMA DUTOK_UINT

    DUTOK_SEMICOLON  shift, and go to state 14
    DUTOK_COMMA      shift, and go to state 15


state 11

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT .

    $default  reduce using rule 1 (mlaskal)


state 12

   13 block_const: DUTOK_CONST . id_assigns DUTOK_SEMICOLON
   14 id_assign: . DUTOK_IDENTIFIER DUTOK_EQ const
   15 id_assigns: . id_assign
   16           | . id_assigns DUTOK_SEMICOLON id_assign

    DUTOK_IDENTIFIER  shift, and go to state 16

    id_assign   go to state 17
    id_assigns  go to state 18


state 13

    2 program_block: block_label block_const . block_type block_var block_proc_func block_begin_end
   17 block_type: .  [DUTOK_VAR, DUTOK_BEGIN, DUTOK_PROCEDURE, DUTOK_FUNCTION]
   18           | . DUTOK_TYPE type_assigns DUTOK_SEMICOLON

    DUTOK_TYPE  shift, and go to state 19

    $default  reduce using rule 17 (block_type)

    block_type  go to state 20


state 14

   11 block_label: DUTOK_LABEL uints DUTOK_SEMICOLON .

    $default  reduce using rule 11 (block_label)


state 15

  108 uints: uints DUTOK_COMMA . DUTOK_UINT

    DUTOK_UINT  shift, and go to state 21


state 16

   14 id_assign: DUTOK_IDENTIFIER . DUTOK_EQ const

    DUTOK_EQ  shift, and go to state 22


state 17

   15 id_assigns: id_assign .

    $default  reduce using rule 15 (id_assigns)


state 18

   13 block_const: DUTOK_CONST id_assigns . DUTOK_SEMICOLON
   16 id_assigns: id_assigns . DUTOK_SEMICOLON id_assign

    DUTOK_SEMICOLON  shift, and go to state 23


state 19

   18 block_type: DUTOK_TYPE . type_assigns DUTOK_SEMICOLON
   19 type_assign: . DUTOK_IDENTIFIER DUTOK_EQ type
   20 type_assigns: . type_assign
   21             | . type_assigns DUTOK_SEMICOLON type_assign

    DUTOK_IDENTIFIER  shift, and go to state 24

    type_assign   go to state 25
    type_assigns  go to state 26


state 20

    2 program_block: block_label block_const block_type . block_var block_proc_func block_begin_end
   22 block_var: .  [DUTOK_BEGIN, DUTOK_PROCEDURE, DUTOK_FUNCTION]
   23          | . DUTOK_VAR var_defs DUTOK_SEMICOLON

    DUTOK_VAR  shift, and go to state 27

    $default  reduce using rule 22 (block_var)

    block_var  go to state 28


state 21

  108 uints: uints DUTOK_COMMA DUTOK_UINT .

    $default  reduce using rule 108 (uints)


state 22

   14 id_assign: DUTOK_IDENTIFIER DUTOK_EQ . const
   93 const: . DUTOK_IDENTIFIER
   94      | . DUTOK_OPER_SIGNADD DUTOK_IDENTIFIER
   95      | . DUTOK_UINT
   96      | . DUTOK_OPER_SIGNADD DUTOK_UINT
   97      | . DUTOK_REAL
   98      | . DUTOK_OPER_SIGNADD DUTOK_REAL
   99      | . DUTOK_STRING

    DUTOK_IDENTIFIER    shift, and go to state 29
    DUTOK_UINT          shift, and go to state 30
    DUTOK_REAL          shift, and go to state 31
    DUTOK_STRING        shift, and go to state 32
    DUTOK_OPER_SIGNADD  shift, and go to state 33

    const  go to state 34


state 23

   13 block_const: DUTOK_CONST id_assigns DUTOK_SEMICOLON .  [DUTOK_TYPE, DUTOK_VAR, DUTOK_BEGIN, DUTOK_PROCEDURE, DUTOK_FUNCTION]
   14 id_assign: . DUTOK_IDENTIFIER DUTOK_EQ const
   16 id_assigns: id_assigns DUTOK_SEMICOLON . id_assign

    DUTOK_IDENTIFIER  shift, and go to state 16

    $default  reduce using rule 13 (block_const)

    id_assign  go to state 35


state 24

   19 type_assign: DUTOK_IDENTIFIER . DUTOK_EQ type

    DUTOK_EQ  shift, and go to state 36


state 25

   20 type_assigns: type_assign .

    $default  reduce using rule 20 (type_assigns)


state 26

   18 block_type: DUTOK_TYPE type_assigns . DUTOK_SEMICOLON
   21 type_assigns: type_assigns . DUTOK_SEMICOLON type_assign

    DUTOK_SEMICOLON  shift, and go to state 37


state 27

   23 block_var: DUTOK_VAR . var_defs DUTOK_SEMICOLON
   24 var_def: . identifiers DUTOK_COLON type
   25 var_defs: . var_def
   26         | . var_defs DUTOK_SEMICOLON var_def
  105 identifiers: . DUTOK_IDENTIFIER
  106            | . identifiers DUTOK_COMMA DUTOK_IDENTIFIER

    DUTOK_IDENTIFIER  shift, and go to state 38

    var_def      go to state 39
    var_defs     go to state 40
    identifiers  go to state 41


state 28

    2 program_block: block_label block_const block_type block_var . block_proc_func block_begin_end
    3 block_proc_func: .  [DUTOK_BEGIN]
    4                | . proc_func_defs DUTOK_SEMICOLON
    5 proc_func_def: . proc DUTOK_SEMICOLON block
    6              | . func DUTOK_SEMICOLON block
    7 proc_func_defs: . proc_func_def
    8               | . proc_func_defs DUTOK_SEMICOLON proc_func_def
   84 proc: . DUTOK_PROCEDURE DUTOK_IDENTIFIER params
   85 func: . DUTOK_FUNCTION DUTOK_IDENTIFIER params DUTOK_COLON DUTOK_IDENTIFIER

    DUTOK_PROCEDURE  shift, and go to state 42
    DUTOK_FUNCTION   shift, and go to state 43

    $default  reduce using rule 3 (block_proc_func)

    block_proc_func  go to state 44
    proc_func_def    go to state 45
    proc_func_defs   go to state 46
    proc             go to state 47
    func             go to state 48


state 29

   93 const: DUTOK_IDENTIFIER .

    $default  reduce using rule 93 (const)


state 30

   95 const: DUTOK_UINT .

    $default  reduce using rule 95 (const)


state 31

   97 const: DUTOK_REAL .

    $default  reduce using rule 97 (const)


state 32

   99 const: DUTOK_STRING .

    $default  reduce using rule 99 (const)


state 33

   94 const: DUTOK_OPER_SIGNADD . DUTOK_IDENTIFIER
   96      | DUTOK_OPER_SIGNADD . DUTOK_UINT
   98      | DUTOK_OPER_SIGNADD . DUTOK_REAL

    DUTOK_IDENTIFIER  shift, and go to state 49
    DUTOK_UINT        shift, and go to state 50
    DUTOK_REAL        shift, and go to state 51


state 34

   14 id_assign: DUTOK_IDENTIFIER DUTOK_EQ const .

    $default  reduce using rule 14 (id_assign)


state 35

   16 id_assigns: id_assigns DUTOK_SEMICOLON id_assign .

    $default  reduce using rule 16 (id_assigns)


state 36
